# SLAU_course

GMRES/: CMakeLists.txt
GMRES/include/: gmres.hpp  poisson_matrix.hpp
GMRES/tests/: test_gmres.cpp
LEVELS/: CMakeLists.txt
LEVELS/include/: csr_matrix.hpp  preconditioners.hpp  utils.hpp  vector.hpp
LEVELS/test/: main.cpp
SOR_CG_PoissMatrix/: CMakeLists.txt
SOR_CG_PoissMatrix/include/: poisson_matrix.hpp  solvers.hpp
SOR_CG_PoissMatrix/tests/: test_solvers.cpp
chebyshev_accelerate/: CMakeLists.txt
chebyshev_accelerate/include/: chebyshev.h  csr_matrix.h  jacobi_step.h
chebyshev_accelerate/tests/: test_main.cpp
slau_1/: CMakeLists.txt
slau_1/include/: solver.hpp
slau_1/src/: solver.cpp
slau_1/tests/: main.cpp
slau_2/: CMakeLists.txt
slau_2/include/: csr_matrix.hpp  matrix.hpp  vector.hpp
slau_2/test/: main.cpp
slau_3/: CMakeLists.txt
slau_3/include/: Matrix.hpp  Vector.hpp
slau_3/src/: Matrix.cpp  QR.cpp  Vector.cpp
slau_3/tests/: testQR.cpp
slau_4/: CMakeLists.txt
slau_4/include/: csr_matrix.hpp  iterative_methods.hpp  vector.hpp
slau_4/src/: csr_matrix.cpp  iterative_methods.cpp  vector.cpp
slau_4/tests/: test_methods.cpp
slau_5/: CMakeLists.txt
slau_5/include/: chebyshev_solver.h  vector.h
slau_5/tests/: test_chebyshev.cpp
