cmake_minimum_required(VERSION 3.10)
project(NumericalMethods)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


include(FetchContent)
FetchContent_Declare(
    googletest
    URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
)
FetchContent_MakeAvailable(googletest)


include_directories(include)


add_executable(test_solvers tests/test_solvers.cpp)
target_link_libraries(test_solvers gtest gtest_main)


